@@ -18,7 +18,7 @@ Document | Node | LibXML::Document | doctype implementation documentElement crea
 DocumentFragment | Node | LibXML::DocumentFragment
 DocumentType | Node | LibXML::Dtd | name publicId systemId |  | entities notations
 Element | Node | LibXML::Element | attributes getAttribute setAttribute removeAttribute getAttributeNode setAttributeNode removeAttributeNode getElementsByTagName | getAttributeNS setAttributeNS removeAttributeNS getAttributeNodeNS setAttributeNodeNS getElementsByTagNameNS hasAttribute hasAttributeNS
-Entity | Node | LibXML::Entity | publicId systemId notationName
+Entity | Node | LibXML::Dtd::Entity | publicId systemId notationName
 EntityReference | Node | LibXML::EntityRef
 Implementation |  | LibXML | createDocument createDocumentType hasFeature
 NamedNodeMap |  | LibXML::Attr::Map | getNamedItem setNamedItem removeNamedItem item length | getNamedItemNS setNamedItemNS removeNamedItemNS
