@@ -1,21 +1,5 @@
-use LibXML::Node;
-use W3C::DOM;
+use LibXML::Dtd::Entity;
 
-unit class LibXML::Entity
-    is repr('CPointer')
-    is LibXML::Node
-    does W3C::DOM::Entity;
-
-use LibXML::Raw;
-use NativeCall;
-
-method new(Str:D :$name!, Str:D :$content!, Str :$external-id, Str :$internal-id, LibXML::Item :$doc) {
-    my xmlEntity:D $native .= create: :$name, :$content, :$external-id, :$internal-id;
-    self.box($native, :$doc);
+class LibXML::Entity is LibXML::Dtd::Entity is repr('CPointer') {
+    method new(|) is DEPRECATED<LibXML::Dtd::Entity.new> { nextsame; }
 }
-
-method publicId { $.raw.ExternalID }
-method systemId { $.raw.SystemID }
-method notationName { $.raw.content }
-
-method raw { nativecast(xmlEntity, self) }
