@@ -36,12 +36,12 @@ my constant @ClassMap = do {
         'LibXML::Dtd'              => XML_DTD_NODE,
         'LibXML::Dtd::AttrDecl'    => XML_ATTRIBUTE_DECL,
         'LibXML::Dtd::ElementDecl' => XML_ELEMENT_DECL,
+        'LibXML::Dtd::Entity'      => XML_ENTITY_DECL,
         'LibXML::DocumentFragment' => XML_DOCUMENT_FRAG_NODE,
         'LibXML::Document'         => XML_DOCUMENT_NODE,
         'LibXML::Document'         => XML_HTML_DOCUMENT_NODE,
         'LibXML::Document'         => XML_DOCB_DOCUMENT_NODE,
         'LibXML::Element'          => XML_ELEMENT_NODE,
-        'LibXML::Entity'           => XML_ENTITY_DECL,
         'LibXML::EntityRef'        => XML_ENTITY_REF_NODE,
         'LibXML::Namespace'        => XML_NAMESPACE_DECL,
         'LibXML::PI'               => XML_PI_NODE,
